[tool.poetry]
name = "tetkit"
version = "0.1.6"
description = "Batteries-included application framework built on Pyramid and tet"
authors = ["Hieu Nguyen <hieu@leadingslash.com>"]
license = "MIT"
readme = "README.md"

homepage = "https://github.com/leadingslash/tetkit"

keywords = ["web", "wsgi", "pyramid", "tet"]

[tool.poetry.urls]
Source = "https://github.com/leadingslash/tetkit"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
pyramid = "2.0"
tet = "0.4.0.dev1"
waitress = "3.0.2"
sqlalchemy = "1.4.39"
zope-sqlalchemy = "1.6"
alembic = "1.8.1"
psycopg2-binary = "2.9.3"
pyramid-tm = "2.5"
pyramid-retry = "2.1.1"
transaction = "3.0.1"
fire = "0.4.0"
sentry-sdk = "1.7.2"
webtest = "2.0.35"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins]
pytest11 = { tetkit_fixtures = "tetkit.testing.fixtures" }
